--- a/views/index.pug
+++ b/views/index.pug
@@ -65,7 +65,7 @@ html(lang='en')
               p Join our mission today.
           .row
             .col
-              p How?
+              p HHow?
 
   //- script(src='https://cdn.polyfill.io/v2/polyfill.min.js')
   //-
