--- a/views/index.pug
+++ b/views/index.pug
@@ -22,6 +22,7 @@ html(lang='en')
     meta(property='og:image' content='')
     meta(property='og:url' content='https://pixelclubs.org/')
     meta(property='og:description' content='')
+    meta(name='viewport' content='width=device-width,minimum-scale=1.0,initial-scale=1,user-scalable=yes')
     if !dev
       style.
         .-d {
@@ -38,8 +39,10 @@ html(lang='en')
               .col Manifesto
               .col.emph Start a PIxEL
           .main.row
-            .col LOGO
-            .col
+            .col.hero
+              .logo
+                object(type='image/svg+xml' data='/images/pixel_logo.svg') Logo
+            .col.hero
               .row PIxEL helps students bring their ideas to life with code.
               .row: span.btn Start a PIxEL
           .tagline programmers + innovators * entrepreneurs + leaders
