welcome to the 21st century

--- a/views/index.pug
+++ b/views/index.pug
@@ -41,7 +41,7 @@ html(lang='en')
           .main.row
             .col.hero
               .logo
-                object(type='image/svg+xml' data='/images/pixel_logo.svg') Logo
+                img(src='/images/pixel_logo.svg' alt='Logo')
             .col.hero
               .row PIxEL helps students bring their ideas to life with code.
               .row: span.btn Start a PIxEL
