--- a/sass/parallax.scss
+++ b/sass/parallax.scss
@@ -40,7 +40,7 @@
 
   &.back {
     width: 101.1%;
-    transform: translate3d(-7px, 0, -1px) scale(2);
+    transform: translate3d(0, 0, -1px) scale(2);
     z-index: 0;
   }
 }
