Add some actual juicy info

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -138,6 +138,10 @@ a {
 .group2 > .fore {
   color: white;
 
+  & > .row {
+    height: 50vh;
+  }
+
   .updates > .col {
     padding: 2em 1.5em;
 
