--- a/views/index.pug
+++ b/views/index.pug
@@ -36,8 +36,8 @@ html(lang='en')
             .row
               .col Blog
               .col Chapters
-              .col Manifesto
-              .col.emph Start a PIxEL
+              .col Mission
+              .col.emph: a(href='mailto:pr@pixelclubs.org?subject=Interested%20in%20creating%20a%20new%20PIxEL%20club') Start a PIxEL
           .main.row
             .col.hero
               .logo
@@ -47,32 +47,32 @@ html(lang='en')
               .row: span.btn Start a PIxEL
           .tagline programmers + innovators * entrepreneurs + leaders
         +back
-      +group.innocent.-d
+      +group.innocent
         +fore
           .row.updates
             .col.blog
               h3 From the blog
-              p: a(href='#') Lorem ipsum dolor sit amet, consectetur adipisicing elit
+              p We have yet to kickoff our blog. Please stay posted!
             .col.news
               h3 Chapter news
-              p: a(href='#') Welcome Northern California!
+              p: a(href='https://twitter.com/PIxELClubs/status/792440882989568000') We have just had our JavaScript Further 1 workshop
           .row.students
             .col
               h3 PIxEL Clubs are started by students, for students.
-              p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-      +group.-d
+              p Our entire curriculum is designed for a high school audience from scratch.
+      +group
         +fore
           .row.practical
             .col: span PIxEL is about the practical.
         +back
-      +group.innocent.-d
+      +group.innocent
         +fore
           .row
             .col
               p Join our mission today.
           .row
             .col
-              p How?
+              p Contact us at #[a(href='mailto:pr@pixelclubs.org?subject=Interested%20in%20creating%20a%20new%20PIxEL%20club') pr@pixelclubs.org].
 
   //- script(src='https://cdn.polyfill.io/v2/polyfill.min.js')
   //-
