Fix link style and add more links

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -78,6 +78,10 @@ a {
         font-weight: 700;
       }
 
+      a {
+        border: 0;
+      }
+
       .emph {
         background: $yellow;
       }
