--- a/views/index.pug
+++ b/views/index.pug
@@ -44,7 +44,7 @@ html(lang='en')
                 img(src='/images/pixel_logo.svg' alt='Logo')
             .col.hero
               .row PIxEL helps students bring their ideas to life with code.
-              .row: span.btn Start a PIxEL
+              .row: a.btn(href='mailto:pr@pixelclubs.org?subject=Interested%20in%20creating%20a%20new%20PIxEL%20club') Start a PIxEL
           .tagline programmers + innovators * entrepreneurs + leaders
         +back
       +group.innocent
